# ChangeLog for media-plugins/gst-plugins-libnice
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-plugins/gst-plugins-libnice/ChangeLog,v 1.45 2014/10/11 13:17:29 maekke Exp $

  11 Oct 2014; Markus Meier <maekke@gentoo.org>
  gst-plugins-libnice-0.1.7.ebuild:
  arm stable, bug #512012

  11 Oct 2014; Markus Meier <maekke@gentoo.org>
  gst-plugins-libnice-0.1.7-r100.ebuild:
  arm stable, bug #512012

  15 Sep 2014; Agostino Sarubbo <ago@gentoo.org>
  gst-plugins-libnice-0.1.7-r100.ebuild, gst-plugins-libnice-0.1.7.ebuild:
  Stable for sparc, wrt bug #512012

  25 Aug 2014; Agostino Sarubbo <ago@gentoo.org>
  gst-plugins-libnice-0.1.7-r100.ebuild, gst-plugins-libnice-0.1.7.ebuild:
  Stable for alpha, wrt bug #512012

  23 Aug 2014; Agostino Sarubbo <ago@gentoo.org>
  gst-plugins-libnice-0.1.7-r100.ebuild, gst-plugins-libnice-0.1.7.ebuild:
  Stable for ia64, wrt bug #512012

  21 Aug 2014; Agostino Sarubbo <ago@gentoo.org>
  gst-plugins-libnice-0.1.7-r100.ebuild, gst-plugins-libnice-0.1.7.ebuild:
  Stable for ppc64, wrt bug #512012

  07 Aug 2014; Jeroen Roovers <jer@gentoo.org>
  gst-plugins-libnice-0.1.7.ebuild, gst-plugins-libnice-0.1.7-r100.ebuild:
  Stable for HPPA (bug #512012).

  28 Jul 2014; Agostino Sarubbo <ago@gentoo.org>
  gst-plugins-libnice-0.1.7-r100.ebuild, gst-plugins-libnice-0.1.7.ebuild:
  Stable for ppc, wrt bug #512012

  23 Jul 2014; Agostino Sarubbo <ago@gentoo.org>
  gst-plugins-libnice-0.1.7-r100.ebuild, gst-plugins-libnice-0.1.7.ebuild:
  Stable for x86, wrt bug #512012

  22 Jul 2014; Agostino Sarubbo <ago@gentoo.org>
  gst-plugins-libnice-0.1.7-r100.ebuild, gst-plugins-libnice-0.1.7.ebuild:
  Stable for amd64, wrt bug #512912

*gst-plugins-libnice-0.1.7-r100 (15 Jul 2014)
*gst-plugins-libnice-0.1.7 (15 Jul 2014)

  15 Jul 2014; Pacho Ramos <pacho@gentoo.org>
  +gst-plugins-libnice-0.1.7-r100.ebuild, +gst-plugins-libnice-0.1.7.ebuild:
  Version bump
