@@ -1,20 +1,18 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
-DIST libnice-0.1.4.tar.gz 712256 SHA256 44e517de9c01203158f2a3d59f058706299a4ae41dfe1a7eeb72c290fcc8bf57 SHA512 ee0029e641c3dc15e5d7f878985f7d87b06e6f033fd14827094171299165120b3b1ffedc6bd036c998768cc9059d7e5dce2322799aa843b0f38487b7243bd40f WHIRLPOOL 1856bdcfe961d391a98d357c56bbbb22a8a110cfcf69deb9af2269a8a133c6657202231844b9ebd86a59e36ad0d68f5f6bffde9ab8bfb965a8a349935b40cc67
 DIST libnice-0.1.7.tar.gz 827258 SHA256 4ed165aa2203136dce548c7cef735d8becf5d9869793f96b99dcbbaa9acf78d8 SHA512 1976eba51b01ea7c7f8cf956afdf656538d15f19e04fdc1707f305b61b571fcaeba8688961a117559c02675610c341b3a88192f3e4eb8fa05fc63abb8891b424 WHIRLPOOL 873ebbc6d9cc172affccaad64af2ddae5226853efee76d7875927a9186dccfdd3663e4aea8ce664a695cf1667a3dbe7b6fb3be3628674d36a4d798c3f2746e61
-EBUILD gst-plugins-libnice-0.1.4-r1.ebuild 1478 SHA256 69996cab74c1b4e92c908d58f76cccc180628f3ea97623e5c40c7329520c66d2 SHA512 902a616e579588ddad869986e019f7c4d689d5943d10cd1dc7714ee8fc1ac8cd8e6e58074d0f75b23018363daa5233e0b19c82b484b5a3bc6fb445d7194fbb5f WHIRLPOOL 248141eb43b7f8177611dc75a22469ecebb3c13267d77d669100e1dbd7c7d844d754633919ce08cd6ae569bc595e719372251ad50d05ec657cdfee1df83684f5
-EBUILD gst-plugins-libnice-0.1.4-r100.ebuild 1326 SHA256 edfda0c01526d38bfaa033cfada63a152f87b9f67e309317959506129c55281b SHA512 cf74d303f9e4fe21bb7f01b1c7f9354f7edf738f919c21c7f2d9bef5897fe2c0f0ab94a9cdcfddfa40803c95a1d3a7f744361175554294a344a6cf004fc404ef WHIRLPOOL 00f6f9fc1af3cc11939d5a842dca551a2844c0d05901fe598a830716f5a29b4cdbcbccde39d0517e54c580f8b11f1e607ccce8c83d548854e4cf0fe38c24f41d
-EBUILD gst-plugins-libnice-0.1.4-r101.ebuild 1479 SHA256 bbc4bdb0ba1a34e7518340977682ba6044bcb6804b63bc003d1e53d8defe2690 SHA512 7fdc85cf204a4d7e77cc009e71d2e55eb8f81bfbeb3154d78629785b95ba423b5a8d1c2025cb0e4b84aeec4926112307bb81724973a7b81e728e3bf9d0b4feea WHIRLPOOL 7eb11afcc688499f2ff79f7f936f9bd28fd42cd2de2b1757a5ffc4bfd180506a8643f0de91c68dcd10f9aef4d7f2ae39d6ab769a62ea1246595b53eeae4dc1a0
-EBUILD gst-plugins-libnice-0.1.4.ebuild 1344 SHA256 46d6098f61bb26869c8b358de21d73fc0289801bf42d5a0175f6f0ca2f1585c5 SHA512 f852d776c24cf9c614be6ab7d7c9b5f6a899be953beb58ff13b4c40d0a96a4578d776c22cc51f25501f7ce2fd2a76380fc5ff784e36d15b4b03f85b2390f117c WHIRLPOOL cca2b9f75e627293b64f070b4b55c7cad4f2da25b0006ffd9e76538c8faba1b723b55c7bc322559d3f51c13b4ae9d10a6bd74740afeece2390f55848c8d3126d
+DIST libnice-0.1.8.tar.gz 881186 SHA256 9da7f09909902d535389d929c3e4d69129528fb18438a6c8565ec812d9904ddf SHA512 d573810d34a7ca9a5deddc11efa16e66615375fff50f91b406d8e6aa05486253335c35dfd0061ee68ee1c3ccbf9ea6c27225ad452540777c2e0ca0f7fe79d496 WHIRLPOOL c07d1d9d303e95af8d4d7f4fccd53a5fb07cbfbcb72f4364b6d3fb9be451e97f9ad5cb38f71a8c1a16e69302a6427261c3a1b5628423314ddfe126313b49d799
 EBUILD gst-plugins-libnice-0.1.7-r100.ebuild 1475 SHA256 915d33516f2e3e4bc6de67439bfbe2adf14c66c73c95dc0b4e5fc5c1697f4300 SHA512 8eadf67d0560eab619eb2f1efbcc99dcbb7c1da6e52b6384eeaafdf5c16200de5464360befab3b700319664254c3f2e6f2e4bf4bd023438300d6136492c21a99 WHIRLPOOL 3c54bfbbec01827fa36445d1a47d0652dfea8e7d5d8294e56b0af1fd96ce351218bbd30cc6bb6b312f8cc310a3e05dbbf4e433d43b0e4f6dc1e976773550098e
 EBUILD gst-plugins-libnice-0.1.7.ebuild 1471 SHA256 773c31983318670bcb4c0a7911d6b43b3f5be76c9c8af3d3fb32f57d1bbc7da8 SHA512 ca6a88e8e00e8b597f194e34ac29ff7554364be32ec6c7f9eb693d49b2b09a05e0a206ef846d528e57de75fe311e3061a9f7d70336fb44de2ee3dd1df6705a54 WHIRLPOOL 2d5ae65b48dd382a5f656eae0d9201dbf9bebf8a127dd7d3cc704baeaf2d86a2b038bfa76baf589bda415f75d88b7cad1c6af85f99d9b99d292c60d5598134be
-MISC ChangeLog 7135 SHA256 17112cdb5d15ce15c26d19b619400bd2fe50847fb71c5d2b0eaa96be26935df1 SHA512 c75a0451a6e181216216ba0e6b90097db9e592afcc7a371152c86ca1da3f24c5f51d63178bad3dfc355084db0b4366319df0b79b24add058dcb6f0cd4dda7ad8 WHIRLPOOL b82c0b3e194f3c824444a73212c3ade1b07019d707a1e8e374eef3d24c4bafe76a8d1f073b9de8d61a7c89851a3c4521c71c044739a90f4ef44fc823c93f2b5f
+EBUILD gst-plugins-libnice-0.1.8-r100.ebuild 1510 SHA256 021d79541feda7e9f790f4dc00a1b543e6951a14f169c0429276606af135dd62 SHA512 b45586b15a2d543354a7d44c633be8d726a7d9938e7c1ed520248f82e6cda6f651420bae2aae1e1e3471783da3f5ed4edadd6fcda14bc083262a3229a7bb86b3 WHIRLPOOL 189b914a8120ec2a33062d93d07557a6b85936515e0ffabb6c97ff2cb4f682ef7296972140d3db826b94eee201164e8c27506ba081aab7daa6a171317e6cdd3f
+EBUILD gst-plugins-libnice-0.1.8.ebuild 1506 SHA256 153dc309873a40c7bc8be8ca6d89b76ffd24cf196a26aa9edb63e26e75829d02 SHA512 82c7ee65f7653f4772652368550466c3b63433a8235b27ed8402d15c214c2be4416612285ffb351b783d9482827705e848a9856461c61fd6b9445fce232c0f4e WHIRLPOOL 545283a1f20b13c9901a9768ef8671c08077baa575dd44d7b6fb66dd76655451c99ae0a7f0e55689cd37a4da0516ef7988967bbb95ee0349587af7f2f1a8716d
+MISC ChangeLog 7528 SHA256 d09e38a259de6a5601c5e798f23efeb41ae6e9f15f1ed75465b507c3c36488dc SHA512 8fdcf347ec6b52006d22e978f0e11de992a6d97e13b68d15facb44768922cae335ccbb6a3525c2c66f6bba2772f4dd6975d50d4e3a2846ddc37a1f3795a94aff WHIRLPOOL 7b3c28f93646f511a525e28c669c3b835d7b62e143cfcb13da058c5a5a70cb93c5b47f6396441dcd5649a10f727119ad038473fb33cf56de5a6584c60033aeb5
 MISC metadata.xml 164 SHA256 054068438b475e4a33fd590df9e1797fa5958c579a699e13714a9fcc3c562df8 SHA512 fd44f7a70894a19eb2ced9384ee59c8759c40d394abaffa836f94f5604642dbc05ccc6977e06d7edaac90ea0cc7610a9728274accde57090d6318176bc11535d WHIRLPOOL 1d94b644e1020ad2a2e3939db4efe6dc69bb92898405312b03cd3a6258db5cf97bf0cb706fdf169d2810f4e3d799b3a362e3d1280d5ec08aa72f6cd0325fb9e9
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iEYEAREIAAYFAlQ5LesACgkQkKaRLQcq0GJ1HQCgkGEzUgxDLBPeOOko0X6SKDy6
-mrYAnROZ2rFV2o7Ke7W0XdreiOgzW+8Z
-=KOps
+iEYEAREIAAYFAlRiEecACgkQCaWpQKGI+9SfZACfbHivij9xuwaiUApqWSuZiDp0
+QY8AnjuBnZAbCEMVkuZpTBv9XHrpt9JR
+=ocy5
 -----END PGP SIGNATURE-----
