@@ -1,6 +1,15 @@
 # ChangeLog for media-plugins/gst-plugins-libnice
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-plugins/gst-plugins-libnice/ChangeLog,v 1.45 2014/10/11 13:17:29 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-plugins/gst-plugins-libnice/ChangeLog,v 1.46 2014/11/11 13:40:54 pacho Exp $
+
+*gst-plugins-libnice-0.1.8-r100 (11 Nov 2014)
+*gst-plugins-libnice-0.1.8 (11 Nov 2014)
+
+  11 Nov 2014; Pacho Ramos <pacho@gentoo.org>
+  +gst-plugins-libnice-0.1.8-r100.ebuild, +gst-plugins-libnice-0.1.8.ebuild,
+  -gst-plugins-libnice-0.1.4-r1.ebuild, -gst-plugins-libnice-0.1.4-r100.ebuild,
+  -gst-plugins-libnice-0.1.4-r101.ebuild, -gst-plugins-libnice-0.1.4.ebuild:
+  Version bump, drop old
 
   11 Oct 2014; Markus Meier <maekke@gentoo.org>
   gst-plugins-libnice-0.1.7.ebuild:
